# HFOS

./: .env.example  .gitignore  IMPLEMENTATION_PLAN.md  Makefile  README.md  docker-compose.yml
.github/workflows/: deploy.yml  reminders.yml
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  database.py  deps.py  enums.py  main.py  schemas.py  security.py  taxonomy.py
backend/app/api/: routes_auth.py  routes_budget.py  routes_config.py  routes_dashboard.py  routes_goals.py  routes_households.py  routes_import.py  routes_property.py  routes_scenarios.py
backend/app/models/: __init__.py  accounts.py  audit.py  base.py  budget.py  core.py  planning.py  property.py
backend/app/scripts/: gen_sample_workbook.py  seed_db.py
backend/app/services/: __init__.py  audit_service.py  budget_service.py  calculations.py  household_service.py  import_service.py  insight_service.py  queries.py  scenario_service.py
backend/data/: sample_workbook.xlsx
backend/tests/: conftest.py  test_calculations.py  test_import.py  test_workflows.py
docs/: API.md  DATA_MODEL.md  DEPLOYMENT.md  KNOWN_LIMITATIONS.md  TELEGRAM_SETUP.md  WHATSAPP_TEMPLATE.md
frontend/: .env.local.example  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: layout.tsx
frontend/components/: viz.tsx
frontend/lib/: api.ts  types.ts
web/: .gitignore  DEPLOY_CLOUDFLARE.md  drizzle.config.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  wrangler.toml
web/app/: error.tsx  globals.css  layout.tsx  (+2 more)
(+80 files in other folders)
